[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10.4"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.7.2"
blake2 = "0.10.4"
sha3 = "0.10.6"

[build-dependencies]
tonic-build = "0.7.2"