[workspace]
members = [ "rhoast_utils", "rust_client_config", "client", ]
default-members = [ "rhoast_utils", "rust_client_config", "client" ]

[package]
name = "rhoast-client"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
structopt = "0.3"
config =  "0.13.1"
prost = "0.10.4"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.7.2"
blake2 = "0.10.4"
sha3 = "0.10.6"
bs58 = "0.4.0"
hex = "0.4.3"
secp256k1 = {version = "0.21.3", features = [ "rand-std", "recovery"]}
base16 = "0.2.1"
bitcoin_hashes = "0.11.0"
reqwest = { version ="0.11.13", features = ["blocking", "json"] }
serde = { version ="1.0.147", features = ["derive"]}
chrono = "0.4.23"
futures = "0.3.25"
csv = "1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tonic-build = "0.7.2"
