[package]
name = "rhoast_client"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rchain-community/rust-client"
categories = ["blockchain", "rchain", "rhoast", "rho-vision", "rholang"]
description = "The Rho vision utility library"
keywords = ["blockchain", "rchain", "rhoast", "rho-vision", "rholang"]
homepage= "https://github.com/rchain-community/rust-client"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tonic = { workspace = true }
rhoast_utils = { path = "../rhoast_utils" }
bitcoin_hashes = { workspace = true }
secp256k1 = { workspace = true, features = [ "rand-std", "recovery"] }
serde = { workspace = true, features = ["derive"]}
futures = { workspace = true }
prost = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tokio = {workspace = true}

[build-dependencies]
tonic-build = "0.7.2"
