[package]
name = "rhoast_utils"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rchain-community/rust-client"
categories = ["blockchain", "rchain", "rhoast", "rho-vision", "rholang"]
description = "The Rho vision utility library"
keywords = ["blockchain", "rchain", "rhoast", "rho-vision", "rholang"]
homepage= "https://github.com/rchain-community/rust-client"
license = "MIT OR Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
blake2 = { workspace = true }
sha3 = { workspace = true }
bs58 = { workspace = true }
hex = { workspace = true }
secp256k1 = { workspace = true, features = [ "rand-std", "recovery"] }
base16 = { workspace = true }
bitcoin_hashes = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true, features = ["derive"]}
chrono = { workspace = true }
futures = { workspace = true }
csv = { workspace = true }

[build-dependencies]
