[package]
name = "rhoast_wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhoast_client = {path= "../rhoast_client", version="0.1.0"}
rhoast_utils = {path= "../rhoast_utils", version= "0.1.1"}
serde_json = { workspace = true }