[package]
name = "rhoast_wallet"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rchain-community/rust-client"
categories = ["blockchain", "rchain", "rhoast", "rho-vision", "rholang"]
description = "The Rho vision rust wallet"
keywords = ["blockchain", "wallet", "rchain", "rhoast", "rho-vision", "rholang"]
homepage= "https://github.com/rchain-community/rust-client"
license = "MIT OR Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhoast_client = {path= "../rhoast_client", version="0.1.0"}
rhoast_utils = {path= "../rhoast_utils", version= "0.1.1"}
serde_json = { workspace = true }
tokio = {workspace = true}
